[gd_scene load_steps=10 format=3 uid="uid://q7tm1hjo843x"]

[ext_resource type="Script" path="res://Niveau/Avatar/avatar.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://bx0v86h6opdxo" path="res://Niveau/Avatar/light.png" id="5"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(15.6, 15.6)

[sub_resource type="Animation" id="2"]
resource_name = "action"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Effet:texture_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.01, 0.02, 0.02, 0.01, 0.02]
}

[sub_resource type="Animation" id="3"]
resource_name = "téléportation_gauche"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Color:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(3, 1), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Color:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-8, -8), Vector2(-8, -8)]
}

[sub_resource type="Animation" id="4"]
resource_name = "téléportation_droit"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Color:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-40, -8), Vector2(-8, -8)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Color:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(3, 1), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5044a"]
_data = {
"action": SubResource("2"),
"téléportation_droite": SubResource("3"),
"téléportation_gauche": SubResource("4")
}

[sub_resource type="Animation" id="5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Color:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-8, -8)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ct40x"]
_data = {
"RESET": SubResource("5"),
"téléportation_droit": SubResource("4"),
"téléportation_gauche": SubResource("3")
}

[node name="Avatar" type="CharacterBody2D"]
z_index = 1
script = ExtResource("1")
start_position = Vector2(0, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("1")

[node name="Color" type="ColorRect" parent="."]
offset_left = -8.0
offset_top = -8.0
offset_right = 7.99999
offset_bottom = 8.0
color = Color(1, 0, 0, 1)

[node name="AnimationInteraction" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5044a")
}

[node name="AnimationDéplacement" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ct40x")
}

[node name="Effet" type="PointLight2D" parent="."]
z_index = -3
scale = Vector2(2, 2)
energy = 2.0
shadow_enabled = true
texture = ExtResource("5")
texture_scale = 0.02

[node name="debug_velocity" type="Line2D" parent="."]
visible = false
z_index = 20
points = PackedVector2Array(0, 0, 0, 0)
width = 4.783
default_color = Color(1, 1, 0, 1)

[node name="debug_velocity_x" type="Line2D" parent="."]
visible = false
z_index = 20
points = PackedVector2Array(0, 0, 0, 0)
width = 4.783
default_color = Color(0, 1, 1, 1)

[node name="debug_velocity_y" type="Line2D" parent="."]
visible = false
z_index = 20
points = PackedVector2Array(0, 0, 0, 0)
width = 4.783
default_color = Color(1, 0, 1, 1)
